- Revamp UPnP plugin (266397)
- Fix bug making it possible to add conflicting items to the schedule (268879)
- Make it possible for schedule items to span multiple days (225939)
- Include disk usage of existing files when calculating bytes left after download in FileSelectDlg (267220)
- Disable scripts in GUI, if no interpreter could be found for the script (270226)

Changes in 4.1.1:
- Make sure that libktorrent translation catalog is inserted (269515)
- Fix wrong tooltip in QM preference page
- Make sure activities list is added again to the GUI after toolbars are edited (269727)
- Prevent port conflicts from happening (268989)
- Clear labels of BasicJobProgressWidget in constructor (270035)
- Make tabbar widget icons follow KDE size changes (270277)
- Fix crash in search plugin (271516)

Changes in 4.1:
- Check if source files are missing before moving them (265607)
- Fix scanextender showing when they are not supposed to (259483)
- Fix mediaplayer unable to stop in buffering mode when streaming (266100)
- KDE 4.4 compatibility fix in search plugin
- Make sure overwrite is possible for the torrent copy file feature
- Fix critical Qt warning when opening context menu in view

Changes in 4.1rc1:
- Make sure that apply button of config dialog is enabled properly when the group changes in the scanfolder settings
- Add kio-magnet
- Improve performance of ktorrent in situations where there are many torrents (262571)
- Fix memory leak on exit (263802)
- Fix tab bar not matching TabBarWidget state in some circumstances (263068)
- Fix libktorrent not gettting updated when the download of a magnet link finishes and the FileSelectDlg is shown
- Update view tab when switching to it, fixes data scan widget showing in the wrong place (259483)
- Update view captions every GUI update (264215)
- Use user modified path for file column in chunks view (264814)
- Fix QM bug causing torrents to get started when it is not needed (262570)

Changes in 4.1beta1: