@@ -7,6 +7,8 @@ Changes in 4.2:
 - Make it possible for schedule items to span multiple days (225939)
 - Include disk usage of existing files when calculating bytes left after download in FileSelectDlg (267220)
 - Disable scripts in GUI, if no interpreter could be found for the script (270226)
+- Show shutdown plugin's config dialog when no rules are present and the enable button is pressed (271311)
+- Make it possible to wait for several events before activating the shutdown action
 
 Changes in 4.1.1:
 - Make sure that libktorrent translation catalog is inserted (269515)
